<resources>
    <string name="app_name">recipe_scanner_app</string>
    <string name="items_detected">Items detected</string>
    <string name="button_find_recipes">Find Recipes ></string>
    <string name="close_x">x</string>
    <string name="title_activity_test">testActivity</string>
    <string name="scan_loading_text">Scanning item...</string>
    <string name="something_went_wrong">Sorry, something went wrong!</string>
    <string name="scan_button_text">Scan</string>
    <string name="done_button">Done ></string>
    <string name="category_title">Chose Category</string>
    <string name="scan_app_title">Fooder</string>
    <string name="title_scanne_items">Scanned Items</string>
    <string name="which_platform">Where do you want to find a great recipe?</string>
    <string name="button_find">Find Recipe</string>
    <string name="text_image_scan">Image</string>
    <string name="text_text_scan">Text</string>
    <string name="image_recognition">Image Scanning Mode</string>
    <string name="text_recognition">Text Scanning Mode</string>
    <string name="first_desc_scanningText">Find great recipes based on what you have in your fridge</string>
    <string name="first_arrow_startScanning"><![CDATA[Start Scanning >]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Save</string>
    <string name="title_add_new_text_item">Add a new item</string>
    <string name="hint_add_fruits_veggies">Add a fruit, veggie or meat!</string>
    <string name="first_text_scanFruits">Scan fruits, veggies or textlabels</string>
    <string name="first_text_startScan"><![CDATA[Start Scanning >]]></string>
    <string name="scan_text_imageScanning">Image Scanning</string>
    <string name="scan_text_textScanning">Text Scanning</string>
    <string name="text_selectFood">Click to select the accurate food</string>
    <string name="button_text_addFood">Add Food</string>
    <string name="toast_noImageWasFound">No image was found</string>
    <string name="toast_noTextWasFound">No text was found</string>


</resources>
