<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jonas.recipe_scanner_app.activity.FirstActivity">

    <include
        android:id="@+id/first_toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/front_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/salad_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_toolbar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/salad_img" />

    <ImageView
        android:id="@+id/front_img_shadow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/front_img"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorBlackOpacity" />

    <ImageView
        android:id="@+id/firstactivity_circle_startScanning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_toolbar"
        app:srcCompat="@drawable/firstactivity_circle_startscanning" />

    <TextView
        android:id="@+id/first_text_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/first_desc_scanningText"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/firstactivity_circle_startScanning"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstactivity_circle_startScanning"
        app:layout_constraintTop_toTopOf="@+id/firstactivity_circle_startScanning" />

    <TextView
        android:id="@+id/first_scan_fruitsVeggies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/grand_hotel"
        android:text="@string/first_text_scanFruits"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/firstactivity_circle_startScanning"
        app:layout_constraintStart_toStartOf="@+id/firstactivity_circle_startScanning"
        app:layout_constraintTop_toBottomOf="@+id/first_text_desc" />

    <Button
        android:id="@+id/first_button_startScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/first_button_start_scan_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/first_text_startScan"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
